app/assets/stylesheets/index.scss
// Place all the styles related to the index controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

@import "foundation_and_overrides";

.index {
  $topbar-margin-bottom: 0;

  .tob-bar {
    z-index: 2;
  }

  #main {
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: $topbar-height;
    z-index: 1;
  }

  #map-canvas {
    height: 100%;
    min-height: 400px;
    width: 100%;

    img {
      max-width: none;
    }
  }

  .full {
    height: 100%;
    margin: 0;
    padding: 0;
  }

  #close-overlay, #close-album-overlay {
    display: block;
    margin-top: -0.5em;
  }

  #overlay, #album-overlay {
    background: white;
    font-family: $font-family-sans-serif;
    font-size: 1.5em;
    line-height: 2;
    margin: 1em;
    padding: 1em;
    //padding-right: 15em;
    width: 20em;

    input {
      margin: 0;
    }

    input[readonly], textarea[readonly] {
      background:none;
      border: none;
      box-shadow: none;
    }

    textarea {
      resize: none;
    }

    .button {
      margin-bottom: 0;
    }

    #album-button {
      padding-top: 0.25rem;
      padding-bottom: 0.25rem;
    }

    .group {
      margin-right: 0.25em;
      margin-left: 0.25em;
    }

    .alert, .secondary {
      cursor: pointer;
    }

    #star {
      cursor: pointer;
      float: right;
      font-size: 1.2em;
    }
  }

  #sidebar {
    margin-top: $topbar-height/2;
  }

  .alert {
    margin: 0;
  }

  #create_album {
    display: block;
    color: #008CBA;
    margin: 0px;
    padding: 0.4375rem 0.875rem;
    text-decoration: none;
    line-height: inherit;
    box-sizing: border-box;
    font-size: 0.875rem;
    font-weight: normal;
    list-style-type: none;
    list-style-position: outside;
    font-family: "Open Sans",Roboto,Arial,sans-serif;
    font-style: normal;
    cursor: auto;
    border-style: none;
    background-color: #FFFFFF;
  }

  #create_album:hover {
    color: #E0FFFF;
    background-color: #008CBA;
  }

  #form-box, #album-box {
    margin: 0px;
    padding: 0px;
    padding-right: 15px;
  }
}

